@startuml selma_finding_lifecycle
' ============================================================
' Title:     Finding Lifecycle State Machine (NORMATIVE)
' Source:    docs/spec/contracts/finding_lifecycle/states.yaml
'            docs/spec/contracts/finding_lifecycle/transitions.yaml
'            docs/spec/contracts/finding_lifecycle/sod_contract.yaml
' C4:        findings_application → finding_events_repository → finding_events_store
' Contract:  1.1.0
' ============================================================

title Selma — Finding Lifecycle FSM\n<size:12><i>Normative 11-state · hierarchical remediation · SoD-1/SoD-2 · system-only close</i></size>

!include ./common/sm_styles.puml

[*] --> Created : <b>FindingCreated</b>\nactor: System (inspections_application)\ncommand: evaluation Fail | Partial | NeedsReview\nstream: FindingCreated

state "Created" as Created #3B7DD8 : **entry** born from inspection Report\n**allowed** system auto-open only\n**forbidden** human mutation · dismiss · waive
state "Open" as Open #3B7DD8 : **entry** disposition=valid decision hub\n**allowed** acknowledge | dismiss | waive | supersede\n**forbidden** close · approve · submit evidence\n**mutex** first action is exclusive

' ---------- Hierarchical composite: remediation path ----------
state "In Remediation" as InRemediation #3B7DD8 {
  [*] --> Acknowledged
  state "Acknowledged\n(In Remedy)" as Acknowledged #3B7DD8 : **entry** remediation accepted\n**allowed** evidence.submit | RO disposition\n**forbidden** close · approve
  state "Evidence\nSubmitted" as EvidenceSubmitted #1B7A6E : **entry** evidence actor recorded for SoD-2\n**allowed** system advance | RO disposition\n**forbidden** human evidence mutation
  state "Pending\nVerification" as PendingVerification #B9770E : **entry** awaits Official decision\n**allowed** approve | reject | RO disposition\n**forbidden** evidence resubmit · close
  state "Verified\n(Resolved)" as Verified #2C6E49 : **entry** remediation approved (pre-terminal)\n**allowed** system close only\n**forbidden** human close · reopen
  state "Rejected\n(Reopen)" as Rejected #A93226 : **entry** remediation rejected\n**allowed** reopen + comments | RO disposition\n**forbidden** approve without reopen

  Acknowledged --> EvidenceSubmitted : <b>EvidenceAccepted</b>\nactor: Compliance Representative\ncommand: evidence.submit\n[capability: evidence.submit]\n/ recordEvidenceSubmitter()\nstream: DispositionChanged\nstory: US-FL-010
  EvidenceSubmitted --> PendingVerification : <b>VerificationRequested</b>\nactor: System\ncommand: on evidence receipt\nstream: DispositionChanged
  PendingVerification --> Verified : <b>RemediationApproved</b>\nactor: Regulatory Official\ncommand: finding.approve_remediation\n[capability: finding.approve_remediation]\n[sod2ActorNotEvidenceSubmitter]\nstream: DispositionChanged\nstory: US-SD-002 / US-SD-002
  PendingVerification --> Rejected : <b>RemediationRejected</b>\nactor: Regulatory Official\ncommand: finding.reject_remediation\n[capability: finding.reject_remediation]\nstream: DispositionChanged\nstory: US-FL-010
}

state "Dismissed\n(Invalid)" as Dismissed #4A4A4A : **entry** disposition=invalid **terminal**\n**allowed** read-only / analytics\n**forbidden** any transition
state "Waived\n(Accepted Risk)" as Waived #B9770E : **entry** disposition=waived **pre-terminal**\n**allowed** system close only\n**forbidden** human close · reopen
state "Closed" as Closed #4A4A4A : **entry** terminal sink\n**allowed** read-only / analytics\n**forbidden** reopen · any mutation

state "Superseded\n(Replaced)" as Superseded #4A4A4A : **entry** disposition=superseded **terminal**\n**allowed** read-only / analytics\n**forbidden** any transition

Created --> Open : <b>Opened</b>\nactor: System\ncommand: auto-open\nstream: DispositionChanged\n/ dispositionRemainsValid()

Open --> InRemediation : <b>AcknowledgementAccepted</b>\nactor: Compliance Representative\ncommand: finding.acknowledge\n[capability: finding.acknowledge]\nstream: DispositionChanged\nstory: US-FL-010
Open --> Dismissed : <b>DismissalDeclared</b>\nactor: Regulatory Official\ncommand: finding.dismiss\n[capability: finding.dismiss]\n/ setDispositionInvalid()\nstream: DispositionChanged\nstory: US-FL-001
Open --> Waived : <b>WaiverGranted</b>\nactor: Regulatory Official\ncommand: finding.waive\n[capability: finding.waive]\n[sod1ActorNotInCreatorProvenance]\n/ setDispositionWaived()\nstream: DispositionChanged\nstory: US-SD-001 / US-SD-001
Open --> Superseded : <b>Superseded</b>\nactor: Regulatory Official\ncommand: finding.supersede\n[capability: finding.supersede]\n[sod1ActorNotInCreatorProvenance]\n/ setDispositionSuperseded()\nstream: DispositionChanged\nstory: US-FL-012

' RO disposition from remediation states (TR-FL-003/004/012 multi-from; INV-FL-006)
' PlantUML: edges from composite interior states exit the composite
Acknowledged --> Dismissed : <b>DismissalDeclared</b>\n[capability: finding.dismiss]\nTR-FL-003
Acknowledged --> Waived : <b>WaiverGranted</b>\n[capability: finding.waive]\n[sod1]\nTR-FL-004
Acknowledged --> Superseded : <b>Superseded</b>\n[capability: finding.supersede]\n[sod1]\nTR-FL-012
EvidenceSubmitted --> Dismissed : <b>DismissalDeclared</b>\n[capability: finding.dismiss]\nTR-FL-003
EvidenceSubmitted --> Waived : <b>WaiverGranted</b>\n[capability: finding.waive]\n[sod1]\nTR-FL-004
EvidenceSubmitted --> Superseded : <b>Superseded</b>\n[capability: finding.supersede]\n[sod1]\nTR-FL-012
PendingVerification --> Dismissed : <b>DismissalDeclared</b>\n[capability: finding.dismiss]\nTR-FL-003
PendingVerification --> Waived : <b>WaiverGranted</b>\n[capability: finding.waive]\n[sod1]\nTR-FL-004
PendingVerification --> Superseded : <b>Superseded</b>\n[capability: finding.supersede]\n[sod1]\nTR-FL-012
Rejected --> Dismissed : <b>DismissalDeclared</b>\n[capability: finding.dismiss]\nTR-FL-003
Rejected --> Waived : <b>WaiverGranted</b>\n[capability: finding.waive]\n[sod1]\nTR-FL-004
Rejected --> Superseded : <b>Superseded</b>\n[capability: finding.supersede]\n[sod1]\nTR-FL-012

' Exit remediation composite
Rejected --> Open : <b>ReopenDeclared</b>\nactor: Regulatory Official\ncommand: finding.reopen\n[capability: finding.reopen]\n[hasMandatoryComments]\nstream: DispositionChanged\nstory: US-FL-010
Verified --> Closed : <b>FindingClosed</b>\nactor: System\ncommand: auto-close\nstream: FindingClosed
Waived --> Closed : <b>FindingClosed</b>\nactor: System\ncommand: auto-close\nstream: FindingClosed\nnote right of Waived --> Closed\n  INV-FL-020: Auto-transitions MUST be\n  appended atomically with the triggering\n  human transition in one DB transaction.\nend note

' Terminal business states → Final pseudostate (STM-015 / STM-024)
Dismissed --> [*] : <b>Finalized</b>\nactor: System
note right of Dismissed
  Legacy streams may contain
  Dismissed→Closed (accepted on
  replay only; never newly emitted).
  See states.yaml legacy_event_migration.
end note
Closed --> [*] : <b>Finalized</b>\nactor: System
Superseded --> [*] : <b>Finalized</b>\nactor: System

@enduml
